--- a/src/library.html
+++ b/src/library.html
@@ -20,5 +20,6 @@
   <body>
     <!-- ❗️❗️❗️ Додавати своі секції за цим прикладом -->
     <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/library.html"></include>
   </body>
 </html>
