--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,7 @@
   <body>
     <!-- ❗️❗️❗️ Додавати своі секції за цим прикладом -->
     <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/header.html"></include>
+    
   </body>
 </html>
