--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
     <!-- ❗️❗️❗️ Додавати своі секції за цим прикладом -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/pagination.html"></include>
+    <include src="./partials/header.html"></include>
   </body>
 </html>
