--- a/src/library.html
+++ b/src/library.html
@@ -22,5 +22,6 @@
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header_library.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/pagination_2.html"></include>
   </body>
 </html>
