--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <!-- ❗️❗️❗️ Додавати своі секції за цим прикладом -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header_home.html"></include>
+    <include src="./partials/section_cards.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination.html"></include>
   </body>
