--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
     <include src="./partials/section_cards.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
