--- a/src/library.html
+++ b/src/library.html
@@ -24,5 +24,6 @@
     <include src="./partials/header_library.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination_2.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
