--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
     <include src="./partials/header_home.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination.html"></include>
-    
+    <include src="./partials/addqueue.html"></include>
   </body>
 </html>
