--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal_students.html"></include>
   </body>
 </html>
