--- a/src/library.html
+++ b/src/library.html
@@ -25,5 +25,6 @@
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination_2.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal_students.html"></include>
   </body>
 </html>
