--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
     <include src="./partials/section_cards.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/pagination.html"></include>
+
     <include src="./partials/footer.html"></include>
-    <include src="./partials/modal_students.html"></include>
+    <!-- <include src="./partials/modal_students.html"></include> -->
   </body>
 </html>
