--- a/src/library.html
+++ b/src/library.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./library.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Додавати своі секції за цим прикладом -->
