--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
     
 
     <include src="./partials/footer.html"></include>
-    <!-- <include src="./partials/modal_students.html"></include> -->
+    <include src="./partials/modal_students.html"></include>
   </body>
 </html>
