--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
     <include src="./partials/addqueue.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal_students.html"></include>
+    <include src="./partials/watched_section_cards.html "></include>
   </body>
 </html>
